--- a/default.conf
+++ b/default.conf
@@ -1,42 +1,49 @@
 server {
-    listen       80;
-    server_name  localhost;
+   listen       80;
+   listen  [::]:80;
+   server_name  localhost;
 
-    #charset koi8-r;
-    #access_log  /var/log/nginx/log/host.access.log  main;
+   set $allow_origin '*';
+   set $allow_methods 'GET, POST, OPTIONS';
+   # set $allow_headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+   set $allow_headers '*';
+   # set $expose_headers 'Content-Length,Content-Range';
+   set $expose_headers '*';
 
-    location / {
-         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' '*';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-         }
-         if ($request_method = 'POST') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' '*';
-            add_header 'Access-Control-Expose-Headers' '*';
-         }
-         if ($request_method = 'GET') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' '*';
-            add_header 'Access-Control-Expose-Headers' '*';
-         }
-         proxy_pass ___TARGET___;
-    }
+   location / {
+      if ($request_method = 'OPTIONS') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         #
+         # Custom headers and headers various browsers *should* be OK with but aren't
+         #
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         #
+         # Tell client that this pre-flight info is valid for 20 days
+         #
+         add_header 'Access-Control-Max-Age' 1728000;
+         add_header 'Content-Type' 'text/plain; charset=utf-8';
+         add_header 'Content-Length' 0;
+         return 204;
+        }
+      if ($request_method = 'POST') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         add_header 'Access-Control-Expose-Headers' $expose_headers;
+      }
+      if ($request_method = 'GET') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         add_header 'Access-Control-Expose-Headers' $expose_headers;
+      }
 
-    #error_page  404              /404.html;
+      proxy_pass __TARGET__;
+   }
 
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+   error_page   500 502 503 504  /50x.html;
+   location = /50x.html {
+      root   /usr/share/nginx/html;
+   }
 }
-
