--- a/default.conf
+++ b/default.conf
@@ -10,37 +10,37 @@ server {
    # set $expose_headers 'Content-Length,Content-Range';
    set $expose_headers '*';
 
-   location / {
+   location __PREFIX__ {
 
-      if ($request_method = 'OPTIONS') {
-         add_header 'Access-Control-Allow-Origin' $allow_origin;
-         add_header 'Access-Control-Allow-Methods' $allow_methods;
-         #
-         # Custom headers and headers various browsers *should* be OK with but aren't
-         #
-         add_header 'Access-Control-Allow-Headers' $allow_headers;
-         #
-         # Tell client that this pre-flight info is valid for 20 days
-         #
-         add_header 'Access-Control-Max-Age' 1728000;
-         add_header 'Content-Type' 'text/plain; charset=utf-8';
-         add_header 'Content-Length' 0;
-         return 204;
-      }
+      # if ($request_method = 'OPTIONS') {
+      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
+      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
+      #    #
+      #    # Custom headers and headers various browsers *should* be OK with but aren't
+      #    #
+      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
+      #    #
+      #    # Tell client that this pre-flight info is valid for 20 days
+      #    #
+      #    add_header 'Access-Control-Max-Age' 1728000;
+      #    add_header 'Content-Type' 'text/plain; charset=utf-8';
+      #    add_header 'Content-Length' 0;
+      #    return 204;
+      # }
 
-      if ($request_method = 'POST') {
-         add_header 'Access-Control-Allow-Origin' $allow_origin;
-         add_header 'Access-Control-Allow-Methods' $allow_methods;
-         add_header 'Access-Control-Allow-Headers' $allow_headers;
-         add_header 'Access-Control-Expose-Headers' $expose_headers;
-      }
+      # if ($request_method = 'POST') {
+      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
+      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
+      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
+      #    add_header 'Access-Control-Expose-Headers' $expose_headers;
+      # }
       
-      if ($request_method = 'GET') {
-         add_header 'Access-Control-Allow-Origin' $allow_origin;
-         add_header 'Access-Control-Allow-Methods' $allow_methods;
-         add_header 'Access-Control-Allow-Headers' $allow_headers;
-         add_header 'Access-Control-Expose-Headers' $expose_headers;
-      }
+      # if ($request_method = 'GET') {
+      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
+      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
+      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
+      #    add_header 'Access-Control-Expose-Headers' $expose_headers;
+      # }
 
       proxy_pass __TARGET__;
    }
