--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 server {
-   listen       80;
-   listen  [::]:80;
-   server_name  localhost;
+   listen 80;
+   listen [::]:80;
+   server_name localhost;
 
    set $allow_origin '*';
    set $allow_methods 'GET, POST, OPTIONS';
@@ -11,42 +11,39 @@ server {
    set $expose_headers '*';
 
    location __PREFIX__ {
+      if ($request_method = 'OPTIONS') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         #
+         # Custom headers and headers various browsers *should* be OK with but aren't
+         #
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         #
+         # Tell client that this pre-flight info is valid for 20 days
+         #
+         add_header 'Access-Control-Max-Age' 1728000;
+         add_header 'Content-Type' 'text/plain; charset=utf-8';
+         add_header 'Content-Length' 0;
+         return 204;
+      }
 
-      # if ($request_method = 'OPTIONS') {
-      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
-      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
-      #    #
-      #    # Custom headers and headers various browsers *should* be OK with but aren't
-      #    #
-      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
-      #    #
-      #    # Tell client that this pre-flight info is valid for 20 days
-      #    #
-      #    add_header 'Access-Control-Max-Age' 1728000;
-      #    add_header 'Content-Type' 'text/plain; charset=utf-8';
-      #    add_header 'Content-Length' 0;
-      #    return 204;
-      # }
-
-      # if ($request_method = 'POST') {
-      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
-      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
-      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
-      #    add_header 'Access-Control-Expose-Headers' $expose_headers;
-      # }
-      
-      # if ($request_method = 'GET') {
-      #    add_header 'Access-Control-Allow-Origin' $allow_origin;
-      #    add_header 'Access-Control-Allow-Methods' $allow_methods;
-      #    add_header 'Access-Control-Allow-Headers' $allow_headers;
-      #    add_header 'Access-Control-Expose-Headers' $expose_headers;
-      # }
-
+      if ($request_method = 'POST') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         add_header 'Access-Control-Expose-Headers' $expose_headers;
+      }
+      if ($request_method = 'GET') {
+         add_header 'Access-Control-Allow-Origin' $allow_origin;
+         add_header 'Access-Control-Allow-Methods' $allow_methods;
+         add_header 'Access-Control-Allow-Headers' $allow_headers;
+         add_header 'Access-Control-Expose-Headers' $expose_headers;
+      }
       proxy_pass __TARGET__;
    }
 
-   error_page   500 502 503 504  /50x.html;
+   error_page 500 502 503 504 /50x.html;
    location = /50x.html {
-      root   /usr/share/nginx/html;
+      root /usr/share/nginx/html;
    }
 }
